<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelpingHands</string>
    <string name="enterpinmsg">Enter a 4 digit PIN</string>
    <string name="action_settings">Settings</string>
    <string name="reenterpinmsg">Re-enter PIN to confirm</string>
    <string name="next">Next</string>
    <string name="title_activity_set_shake_level">SetShakeLevel</string>
    <string name="hello_world">Hello world!</string>
    <string name="setshake">Shake the device. Set the desired level of acceleration which would trigger Danger Notifications</string>
    <string name="title_activity_user_info">UserInfo</string>
    <string name="entername">Name</string>
    <string name="enteremail">Email</string>
    <string name="entercode">Enter Code</string>
    <string name="sendcode">Send Code</string>
    <string name="title_activity_nominate_contacts">NominateContacts</string>
    <string name="name">Name :</string>
    <string name="phone">Phone :</string>
    <string name="email">Email :</string>
    <string name="title_activity_login">HelpingHands</string>
    <string name="loginpinmsg">Enter the 4 digit PIN</string>
    <string name="login">Login</string>
    <string name="title_activity_alert">Alert</string>
    <string name="defthresh">Use Default Threshold Value</string>
    <string name="finish">Finish</string>
    <string name="title_activity_stop">Stop</string>
    <string name="title_register_pin">RegisterPIN</string>
    <string name="STOP">STOP</string>
    <string name="ALERT">ALERT !</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="welcome_msg0">Shake the device when in danger.</string>

    <string name="welcome_msg1">We will send SMS and emails to your trusted contacts.</string>

    <string name="welcome_msg2">Including your current location.</string>

    <string name="welcome_msg3">It\'s that simple ♡</string>

    <string name="str_start_recording">Start Recording</string>

    <string name="str_retry">Retry</string>

    <string name="str_done_screen1">Done. You can close the app!</string>
    <string name="str_done_screen2">1. Shake device above threshold value\nOR\n2. Press Alert button manually!</string>
    <string name="str_done_screen3">Stay safe :)</string>

    <string name="str_recreate_service_intent">io.github.aloygupta.helpinghands.recreateshake</string>


</resources>
