<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.helpinghands.SetShakeLevel" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setshake" />
    
    <Button 
        android:id="@+id/defThresh"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:text="@string/defthresh"
        android:onClick="onDefThreshClick" />
            
    
    <Button 
        android:id="@+id/aftershake"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:text="@string/finish"
        android:onClick="finishButton" />
        

</LinearLayout>
