<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context="com.helpinghands.fragment.HeroBannerFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hi,"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_display2"
            />
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_display1"
            />
    </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_centerInParent="true"
        android:gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_msg0"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_subhead"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_msg1"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_subhead"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_msg2"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_subhead"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_msg3"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_display1"/>



        </LinearLayout>





    <Button
        android:id="@+id/nominate_sms_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="12dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:elevation="12dp"
        android:background="@drawable/rounded_filled_button"
        android:text="Nominate SMS Contacts &#8594;"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:typeface="normal"
        android:textStyle="bold"

        />



    </RelativeLayout>